--- a/Germany.html
+++ b/Germany.html
@@ -24,36 +24,12 @@
   <body id="page-top" data-spy="scroll">
     
     <!-- Intro Section -->
-    <section id="intro" class="intro-section">
+    <section id="about" class="intro-section">
       <div class="container">
-        <img src="img/logo.svg" class="logo">
-        <img src="img/line.svg" class="dots">
-        <div id="circle1"></div>
-        <div class="col-md-10 col-offset-1">
-          <div class="row tagline">
-            <div class="col-lg-12">
-              <h2>Your guide to common cultural faux pas on your next trip abroad</h2>
-                <div id="custom-search-input">
-                  <div class="row">
-                    <div class="input-group col-md-12">
-                      <div class="col-md-6">
-                        <h3>Where are you going?</h3>
-                      </div>
-                      <div class="col-md-6">
-                      <!-- <span>Where are you going?</span> -->
-                        <input type="text" class="form-control fo-se" placeholder="Madagascar"/>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-            </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <h1>Intro</h1>
           </div>
-        </div>
-        <div id="circle2"></div>
-        <div class="scroll-top-wrapper center">
-          <span class="scroll-top-inner">
-            <i class="fa fa-2x fa-chevron-circle-down scroll"></i>
-          </span>
         </div>
       </div>
     </section>
@@ -90,7 +66,7 @@
         </div>
       </div>
     </section>
-
+    
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
