--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
                 <form method="post" class="form-inline form-horizontal" role="form">
                   <label class="control-label col-sm-5" for="jbe"><i class="icon-envelope"></i> Where are you going? </label>
                   <div class="input-group col-sm-5">
-                    <input class="form-control" type="email" name="email" placeholder="Madagascar"/>
+                    <input class="form-control" type="text" placeholder="Madagascar"/>
+                    <span><a href="https://4paws.meteor.com">
+                    <i class="fa fa-arrow-right"></i></span>
                   </div>
                 </form>
               </div>
@@ -82,8 +84,8 @@
           <div class="col-lg-12 col-md-offset-1">
             <div class="col-lg-6">
               <h1 class="big white pull-left">Germany</h1>
-              <p class="pull-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure nihil ab dicta magni asperiores. Debitis accusamus ipsam error eligendi deleniti perferendis quod enim, laudantium nam libero ipsum, officiis sint ipsa?</p>
-              <p class="pull-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure nihil ab dicta magni asperiores. Debitis accusamus ipsam error eligendi deleniti perferendis quod enim, laudantium nam libero ipsum, officiis sint ipsa? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime repudiandae magni consequuntur in? Aliquam perferendis nobis alias sunt, itaque et, dignissimos laboriosam accusantium similique quisquam odit molestiae, quidem quaerat doloremque.</p>
+              <p class="pull-left">Germans are known for being sticklers for following rules. find out what you need to know to get by in this proud country.</p>
+              <p class="pull-left">For example, don’t expect to be served tap water at restaurants. In fact, don’t even ask for tap water. All you will get is a strange look, because bottled water is what’s on the menu.</p>
               <button class="btn btn-warning pull-left"><a href="Germany.html">Learn More</a></button>
               </div>
             </div>
@@ -105,8 +107,8 @@
             </div>
             <div class="col-md-offset-1 col-lg-6">
               <h1 class="big black pull-left">Egypt</h1>
-              <p class="pull-right">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure nihil ab dicta magni asperiores. Debitis accusamus ipsam error eligendi deleniti perferendis quod enim, laudantium nam libero ipsum, officiis sint ipsa?</p>
-              <p class="pull-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure nihil ab dicta magni asperiores. Debitis accusamus ipsam error eligendi deleniti perferendis quod enim, laudantium nam libero ipsum, officiis sint ipsa? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime repudiandae magni consequuntur in? Aliquam perferendis nobis alias sunt, itaque et, dignissimos laboriosam accusantium similique quisquam odit molestiae, quidem quaerat doloremque.</p>
+              <p class="pull-right">Egyptians are known for their generosity and hospitality. Most families are conservative and religous, and so most etiquette is based on religious beliefs.</p>
+              <p class="pull-left">You should always eat with your right hand and enter a house with your right foot. The left side of the body is used for 'unclean' things. Also, wearing short shorts and skirts can be disrespectful to some people.</p>
               <button class="btn btn-warning pull-left"><a href="#">Learn More</a></button>
             </div>
           </div>
@@ -127,11 +129,11 @@
                   <div class="input-group">
                     <div class="input-group-btn dropdown">
                       <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Category
+                        Etiquette
                         <span class="caret"></span>
                       </button>
                       <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Etiquette</a></li>
+                        <li><a class="dropdown-item" href="#">Red Flags</a></li>
                         <li><a class="dropdown-item" href="#">Tipping</a></li>
                         <li><a class="dropdown-item" href="#">Dress Code</a></li>
                         <li><a class="dropdown-item" href="#">Dialect</a></li>
@@ -148,13 +150,22 @@
                   </div>
                 </div>
             </div>
-            <button class="btn btn-warning pull-left">Submit</button>
+            <button class="btn btn-warning pull-left"><a href="https://4paws.meteor.com">Submit</a></button>
             </div>
           </div>
         </div>
       </div>
     </section>
 
+    <!-- <script>
+      var redirect = function(url, method) {
+        var form = document.createElement('form');
+        form.method = method;
+        form.action = url;
+        form.submit();
+      };
+
+      redirect('https://4paws.meteor.com', 'post');</script> -->
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
@@ -164,8 +175,5 @@
     <!-- Scrolling Nav JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/scrolling-nav.js"></script>
-
   </body>
-
-
 </html>
