--- a/Germany.html
+++ b/Germany.html
@@ -34,7 +34,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#Home">
+          <a class="navbar-brand" href="index.html">
             <img src="img/orangelogo.svg" alt="">
           </a>
         </div>
